--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,31 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+.DS_Store
+*.meta
+*.mat
+*.prefab
+*.png
+*.unity
+*.psd
+*.asset
+*.aspx
+*.map
+*.config
+*.xml
+*.dll
+*.nib
+*.assets
+*.browser
+*.ini
+*.resS
+*.plist
+server.app/Contents/Resources/unity default resources
+*.tif
+server.app/*
+client1.app/*
+client2.app/*
+Assets/TextMesh Pro/*
+*.dylib
+Packages/manifest.json
+ProjectSettings/ProjectVersion.txt
